--- a/website/style.css
+++ b/website/style.css
@@ -1,596 +1,176 @@
-body {
+/* General Styles */
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
     background: black;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background-size: cover;
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
     overflow: hidden;
 }
 
-#coinsLabel{    
+header, main, nav, section {
+    width: 100%;
     text-align: center;
-    margin-top: 130px;
-    color: white;
 }
 
-#energyLabel{
-    text-align: center;
-    margin-top: 55px;
-    color: white;
+/* Stats Section */
+#stats {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
 }
 
-#mainButtonBox{
-    margin-top: 40px;
+.stat-box {
+    background-color: white;
+    border-radius: 4px;
+    width: 30%;
+    padding: 10px;
+}
+
+.coin-icon {
+    width: 25px;
+    height: 25px;
+    vertical-align: middle;
+}
+
+/* Progress Bar Section */
+#progress {
+    margin: 20px 0;
+}
+
+#progressBarBox {
+    background-color: white;
+    width: 90%;
+    height: 20px;
+    border-radius: 8px;
+    margin: 0 auto;
     position: relative;
-    border-radius: 50%;
+}
+
+#progressBar {
+    background: linear-gradient(90deg, rgba(255,1,0,1) 0%, rgba(0,174,255,1) 100%);
+    height: 100%;
+    border-radius: 8px;
+    width: 0;
+}
+
+#progressBarBoxStatusLabel, #progressBarBoxLevelLabel {
+    color: white;
+    margin: 5px 0;
+}
+
+/* Game Field Section */
+#gameField {
+    margin: 20px 0;
+}
+
+#coinsLabel {
+    color: white;
+    margin-top: 20px;
+}
+
+#mainButtonBox {
     width: 70vw;
     height: 70vw;
+    border-radius: 50%;
+    margin: 20px auto;
 }
 
-@keyframes upAndFadeOut {
-  0% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(-220px); /* Move up by 40px */
-    opacity: 0; /* Fade out */
-  }
-}
-
-#menu {
-    z-index: 0;
-    position: absolute;
-    margin-top: 40px;
-    padding-top: 5px;
-    text-align: center;
-    top: 620px;
-    width: 90%;
-    margin-left: 5%;
-    height: 50px;
-    background: white;
-    border-radius: 4px;
-}
-
-#friendsButton{
-    position: absolute;
-    left: 35.6vw;
-
-    padding-top: 5px;
-    top:5px;
-    color:white;
-    margin: 0 auto;
-    height: 40px;
-    width: 16.8vw;
-    background-color: black;
-    border-radius: 5px;
-}
-
-#earnButton{
-    position: absolute;
-    padding-top: 5px;
-    top: 5px;
-    color:white;
-    margin: 0 auto;
-    height: 40px;
-    width: 16.8vw;
-    margin-left: 53.4vw;
-    background-color: black;
-    border-radius: 5px; 
-}
-
-#gameButton{
-    padding-top: 5px;
-    color:red;
-    position: absolute;
-    margin-left: 1vw;
-    height: 40px;
-    width: 16.8vw;
-    background-color: black;
-    border-radius: 5px;
-}
-
-#inviteSimpleBox{
-    color: var(--tg-theme-bg-color);
-    position: absolute;
-    width: 90%;
-    height: 90px;
-    background-color: white;
-    border-radius: 4px;
-    margin-left: 5%;
-    margin-top: 5%;
-}
-
-#invitePremiumBox{
-    color: var(--tg-theme-bg-color);
-    position: absolute;
-    width: 90%;
-    height: 90px;
-    background-color: white;
-    border-radius: 4px;
-    margin-left: 5%;
-    margin-top: 32%;
-}
-
-#friendsBox{
-    overflow-y: scroll;
-    position: absolute;
-    width: 90%;
-    height: 105px;
-    background-color: white;
-    border-radius: 4px;
-    margin-left: 5%;
-    margin-top: 70%;
-}
-
-#inviteFriendBox{
-    color: var(--tg-theme-bg-color);
-    position: absolute;
-    width: 67%;
-    height: 60px;
-    background-color: white;
-    border-radius: 4px;
-    margin-left: 5%;
-    margin-top: 118%;
-}
-
-#generateLinkBox{
-    position: absolute;
-    width: 20%;
-    height: 60px;
-    background-color: white;
-    border-radius: 4px;
-    margin-left: 75%;
-    margin-top: 118%;
-}
-
-#refreshFriendsList{
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border-radius: 4px;
-    margin-left: 85.5%;
-    margin-top: 58.5%;
-}
-
-.subFriendsBox{
-    border-radius: 4px;
-    background-color: var(--tg-theme-bg-color);
-    width: 90%;
-    margin-left: 5%;
-    height: 50px;
-    margin-top: 5vw;
-    margin-bottom: 5vw;
-}
-
-.subFriendsBoxUsername{
-    margin-left: 2vw;
-    position: absolute;
-    margin-top: 3.5vw;
-    text-align: left;
-    color: white;
-}
-
-.subFriendsBoxStatus{
-    margin-left: 50vw;
-    position: absolute;
-    margin-top: 3.5vw;
-    text-align: left;
-    color: red;
-}
-
-#earnPerClickBox{
-    height: 60px;
-    background-color: white;
-    width: 26.6vw;
-    border-radius: 4px;
-    position: absolute;
-    margin-top: 50px;
-    margin-left: 5vw;
-}
-
-#clicksTillLevelUp{
-    height: 60px;
-    background-color: white;
-    width: 26.6vw;
-    border-radius: 4px;
-    position: absolute;
-    margin-top: 50px;
-    margin-left: 36.6vw;
-}
-
-#passiveClicks{
-    height: 60px;
-    background-color: white;
-    width: 26.6vw;
-    border-radius: 4px;
-    position: absolute;
-    margin-top: 50px;
-    margin-left: 68.2vw;
-}
-
-.insideLabel{
-    text-align: center;
-    margin-top: 5px
-}
-
-#earnPerClickCoin{
-    margin-top: -25px;
-    margin-left: 35px;
-}
-
-#earnPerClickLabel{
-    margin-top: -27px;
-    margin-left: 70px;
-    color: black;
-}
-
-#clicksTillLevelUpLabel{
-    margin-top: -10px;
-    text-align: center;
-}
-
-#passiveClicksCoin{
-    margin-top: -25px;
-    margin-left: 35px;
-}
-
-#passiveClicksLabel{
-    margin-top: -27px;
-    margin-left: 70px;
-    color: black;
-}
-
-#progressBarBox{
-    width: 90vw;
-    margin-left: 5vw;
-    height: 20px;
-    border-radius: 8px;
-    background-color: white;
-    position: absolute;
-    margin-top: 185px;
-}
-
-#progressBar{
-    width: 0vw;
-    height: 20px;
-    position: absolute;
-    background: rgb(255,1,0);
-    background: linear-gradient(90deg, rgba(255,1,0,1) 0%, rgba(0,174,255,1) 100%);
-    border-radius: 8px;
-}
-
-#progressBarBoxStatusLabel{
-    position: absolute;
-    color: white;
-    margin-top: 160px;
-    margin-left: 5vw;
-}
-
-#progressBarBoxLevelLabel{
-    position: absolute;
-    color: white;
-    margin-top: 160px;
-    margin-left: 80vw;
-}
-
-#developerButton{
-    padding-top: 5px;
-    color:white;
-    position: absolute;
-    margin-left: 71.2vw;
-    height: 40px;
-    width: 16.8vw;
-    background-color: black;
-    border-radius: 5px;
-    top: 5px;
-}
-
-#add1000{
-    text-align: center;
-    position: absolute;
-    width: 42.5vw;
-    height: 15vw;
-    margin-left: 5vw;
-    margin-top: 5vw;
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-}
-#add10000{
-    text-align: center;
-    position: absolute;
-    width: 42.5vw;
-    height: 15vw;
-    margin-left: 52.5vw;
-    margin-top: 5vw;
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-}
-
-#add100k{
-    text-align: center;
-    position: absolute;
-    width: 42.5vw;
-    height: 15vw;
-    margin-left: 5vw;
-    margin-top: 25vw;
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-}
-
-#add1M{
-    text-align: center;
-    position: absolute;
-    width: 42.5vw;
-    height: 15vw;
-    margin-left: 52.5vw;
-    margin-top: 25vw;
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-}
-
-#add10M{
-    text-align: center;
-    position: absolute;
-    width: 42.5vw;
-    height: 15vw;
-    margin-left: 5vw;
-    margin-top: 45vw;
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-}
-
-#add1B{
-    text-align: center;
-    position: absolute;
-    width: 42.5vw;
-    height: 15vw;
-    margin-left: 52.5vw;
-    margin-top: 45vw;
-    color: black;
-    background-color: white;
-    border-radius: 5px;
-}
-
-#usernameLabel{
-    margin-bottom: -40px;
-    position: relative;
-    color: white;
-}
-
-#coinLogoEarnBox{
-    margin-left: 43vw;
-    margin-top: 10vw
-}
-
-#earnBoxLabel{
-    color: white;
-    margin-top: 10px;
-    text-align: center;
-}
-
-#dailyTasksLabel{
-    color: white;
-    margin-top: 10px;
-    margin-left: 5vw;
-}
-
-#dailyRewardsBox{
-    z-index: 0;
-    margin-left: 5vw;
-    width: 90vw;
-    height: 60px;
-    background-color: white;
-    position: absolute;
-    border-radius: 5px;
-}
-
-#calendarLogo{
-    z-index: 0;
-    margin-top: 10px;
-    margin-left: 10px;
-}
-
-#dailyRewardLabel{
-    z-index: 0;
-    position: absolute;
-    color: black;
-    margin-left: 70px;
-    margin-top: -45px;
-}
-
-#plusMoneyLabel{
-    position: absolute;
-    color: black;
-    margin-left: 100px;
-    margin-top: -20px;
-}
-
-#arrowLabelEarnBox{
-    position: absolute;
-    color: black;
-    margin-left: 80vw;
-    margin-top: -40px; 
-}
-
-#dailyRewardsPopUpBox{
+/* Referral Field Section */
+#referalField {
     display: none;
-    height: 700px;
-    margin-left: 0vw;
-    position: absolute;
-    margin-top: -50px;
-    width: 100vw;
+}
+
+.invite-box {
+    background-color: white;
+    border-radius: 4px;
+    padding: 20px;
+    margin: 20px auto;
+    width: 80%;
+}
+
+#friendsBox {
+    background-color: white;
+    border-radius: 4px;
+    width: 90%;
+    margin: 20px auto;
+    overflow-y: scroll;
+    height: 150px;
+}
+
+#friendListHeader, #noInvitesMessage {
+    color: white;
+    margin: 10px 0;
+}
+
+/* Developer Field Section */
+#devField {
+    display: none;
+}
+
+.dev-button {
+    background-color: white;
+    border-radius: 4px;
+    padding: 10px;
+    margin: 10px;
+    width: 40%;
+    display: inline-block;
+}
+
+/* Earn Box Section */
+#earnBox {
+    display: none;
+    margin: 20px 0;
+}
+
+#coinLogoEarnBox {
+    width: 70px;
+    height: 70px;
+    margin: 10px auto;
+}
+
+#earnBoxLabel, #dailyTasksLabel {
+    color: white;
+}
+
+/* Daily Rewards Pop Up */
+#dailyRewardsPopUpBox {
+    display: none;
     background-color: black;
     border-top: 5px solid yellow;
-    border-radius: 50px;
-    z-index: 0;
-}
-
-#closeDailyRewardsPopUpBoxBox{
-    width: 40px;
-    height: 40px;
-    background-color: white;
-    border-radius: 10px;
-    margin-top: 5vw;
+    border-radius: 50px 50px 0 0;
+    padding: 20px;
     position: absolute;
-    margin-left: 85vw;
+    top: 0;
+    width: 100%;
+    z-index: 100;
 }
 
-#popUpCalendar{
-    width: 15vw;
-    height: 15vw;
+.daily-box {
     background-color: white;
-    border-radius: 5px;
-    margin-top: 5vw;
-    margin-left: 42.5vw;
-}
-
-#calendarLogoPopUp{
-    width: 13vw;
-    margin-top: 1vw;
-    margin-left: 1vw;
-    height: 13vw;
-}
-
-#popUpBoxLabel{
-    text-align: center;
-    color: white;
-}
-
-#popUpBoxDescription{
-    color: white;
-    text-align: center;
-    margin-top: -10px;
-}
-
-#day1Box{
     border: 3px solid green;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
     border-radius: 5px;
-    margin-left: 5vw;
-    margin-top: -2vw;
+    padding: 10px;
+    margin: 10px auto;
+    width: 80%;
+    text-align: center;
 }
 
-#day2Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
+/* Menu Navigation */
+#menu {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     background-color: white;
-    border-radius: 5px;
-    margin-left: 28.75vw;
-    margin-top: -2vw;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
 }
 
-#day3Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
-    border-radius: 5px;
-    margin-left: 52.5vw;
-    margin-top: -2vw;
-}
-
-#day4Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
-    border-radius: 5px;
-    margin-left: 76.25vw;
-    margin-top: -2vw;
-}
-
-#day5Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
-    border-radius: 5px;
-    margin-left: 5vw;
-    margin-top: 21.75vw;
-}
-
-#day6Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
-    border-radius: 5px;
-    margin-left: 28.75vw;
-    margin-top: 21.75vw;
-}
-
-#day7Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
-    border-radius: 5px;
-    margin-left: 52.5vw;
-    margin-top: 21.75vw;
-}
-
-#day8Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
-    border-radius: 5px;
-    margin-left: 76.25vw;
-    margin-top: 21.75vw;
-}
-
-#day9Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
-    border-radius: 5px;
-    margin-left: 5vw;
-    margin-top: 45.5vw;
-}
-
-#day10Box{
-    opacity: 50%;
-    position: absolute;
-    width: 18.75vw;
-    height: 18.75vw;
-    background-color: white;
-    border-radius: 5px;
-    margin-left: 28.75vw;
-    margin-top: 45.5vw;
-}
-
-#popUpClaimButton{
-    height: 60px;
-    width: 90vw;
-    margin-left: 5vw;
-    background-color: blue;
-    position: absolute;
-    border-radius: 5px;
-    margin-top: 69.25vw;
+#menu button {
+    background-color: black;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 4px;
+    width: 20%;
 }
